--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,9 @@
 ---
-// Component Imports
 import BaseHead from '../components/BaseHead.astro';
 import BlogHeader from '../components/BlogHeader.astro';
 import BlogFooter from '../components/BlogFooter.astro';
 
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
-let title = 'Theodore Garson';
+let title = 'Theodore Garson\'s website';
 let subtitle = 'Principal Software Engineer';
 let description = 'Welcome to my personal website.';
 let permalink = 'https://theodoregc.github.io';
