--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,6 +3,7 @@ import { Markdown } from 'astro/components';
 import BaseHead from '../components/BaseHead.astro';
 import BlogHeader from '../components/BlogHeader.astro';
 import BlogPost from '../components/BlogPost.astro';
+import BlogComment from '../components/BlogComment.astro';
 import BlogFooter from '../components/BlogFooter.astro';
 
 const {content} = Astro.props;
@@ -18,6 +19,7 @@ const {title, description, publishDate, author, heroImage, permalink, alt} = con
     <BlogHeader />
     <BlogPost title={title} author={author} heroImage={heroImage} publishDate={publishDate} alt={alt}>
       <slot />
+      <BlogComment />
     </BlogPost>
     <BlogFooter />
   </body>
